# cleepboard

./: .gitignore  README.md  clipboard-manager-design.md  design.pen  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  hotkey.rs  lib.rs  main.rs  store.rs
