[package]
name = "cleepboard"
version = "0.1.0"
description = "A lightweight, design-first clipboard manager for Linux"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cleepboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
